--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+    justify-content: space-between;
+}
